@@ -1,5 +1,16 @@
 2010-07-07  Antti Koivisto  <koivisto@iki.fi>
 
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [Qt] Initial WebKit2 implementation
+        https://bugs.webkit.org/show_bug.cgi?id=40233
+        
+        Add Qt section to the prefix header.
+
+        * WebKit2Prefix.h:
+
+2010-07-07  Antti Koivisto  <koivisto@iki.fi>
+
         Not reviewed.
 
         Fix build, remove some left over debugging code.
